--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<body bgcolor="red">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="utf-8">
+   <title>La mia pagina</title>
+</head>
+
+<body>
+
+</body>
+
+</html><body bgcolor="red">
 <h1>Titolo</h1>
 </body>
