--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	 Ciao
+	<h1>Titolo</h1>
+	<h6>Mini sottotitolo</h6>
+	<div>
+	<p>
+  		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>.
+	</p>
+	<p>
+  		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.
+	</p>
+	</div>
 </body>
 
 </html>
