--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 	<h1>Titolo</h1>
 	<h6>Mini sottotitolo</h6>
 	<div>
+		<ul>
+  			<li>Primo elemento</li>
+  			<li>Secondo elemento</li>
+  			<li>Terzo elemento</li>
+		</ul>
+		<p>^ Puntata, v Numerata</p>	
+		<ol>
+                        <li>Primo elemento</li>
+                        <li>Secondo elemento</li>
+                        <li>Terzo elemento</li>
+                </ol>
+
+	</div>
+	<div>
 	<p>
   		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>.
 	</p>
