--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 	<h1>Titolo</h1>
 	<h6>Mini sottotitolo</h6>
+	<a herf="P2.html">Ancora esterna</a>
+	<a herf="Ai1">Ancora interna</a>
 	<div>
 		<ul>
   			<li>Primo elemento</li>
@@ -19,16 +21,18 @@
 		<ol>
                         <li>Primo elemento</li>
                         <li>Secondo elemento</li>
-                        <li>Terzo elemento</li>
+       	                <li>Terzo elemento</li>
                 </ol>
-
+	</div>
+	<div>
+		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1" width=50 height=120 />
 	</div>
 	<div>
 	<p>
   		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>.
 	</p>
 	<p>
-  		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.
+  		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.	
 	</p>
 	</div>
 </body>
