--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
                 </ol>
 	</div>
 	<div>
-		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1" width=50 height=120 >
+		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1">
 	</div>
 	<div>
 	<p>
-  		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>.
-	</p>
+  		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em	</p>
 	<p>
   		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.	
 	</p>
