--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ol>
 	</div>
 	<div>
-		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1">
+		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1" width=50px height=120px >
 	</div>
 	<div>
 	<p>
