--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 	<h1>Titolo</h1>
 	<h6>Mini sottotitolo</h6>
-	<a herf="P2.html">Ancora esterna</a>
+	<a href="P2.html">Ancora esterna</a>
 	<br>
-	<a herf="Ai1">Ancora interna</a>
-	<div>
+	<a href="Ai1">Ancora interna</a>
+	<div class="uno">
 		<ul>
   			<li>Primo elemento</li>
   			<li>Secondo elemento</li>
@@ -25,8 +25,9 @@
        	                <li>Terzo elemento</li>
                 </ol>
 	</div>
+	<p id="D1">Divisore</p>
 	<div>
-		<img scr="foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1" width=50px height=120px >
+		<img scr="./foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1">
 	</div>
 	<div>
 	<p>
