--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<div>
 	<p>
-  		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em	</p>
+  		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>	</p>
 	<p>
   		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.	
 	</p>
