--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
    <meta charset="utf-8">
+   <link rel="stylesheet" type="text/css" herf="stile.css">
    <title>La mia pagina</title>
 </head>
 
@@ -26,11 +27,11 @@
                 </ol>
 	</div>
 	<p id="D1">Divisore</p>
-		<img scr="./foto-caffe-fancycrave-750x371.jpg" alt="descrizione" name="Ai1">
+		<img src="foto-caffe-fancycrave-750x371.jpg" alt="descrizione">
 	<div>
 	<p>
   		Questo è il testo<br> <small>sul</small> <em><strong><mark>primo</mark> paragrafo</strong></em>	</p>
-	<p>
+	<p name="Ai1">
   		Questo è invece<br> <small>il</small> <em><strong><mark>secondo</mark> paragrafo</strong></em>.	
 	</p>
 	</div>
